tests/models/struct/usize/fail/max_length.rs
use dade::model;
#[model]
struct TestModel {
    #[field(max_length = 2)]
    value: usize,
}
fn main() {}
